# mep-django

./: .babelrc  .coveragerc  .git-blame-ignore-revs  .gitignore  .pa11yci.json  .pre-commit-config.yaml  .python-version  .travis.yml  .zenodo.json  CHANGELOG.rst  CITATION.cff  DEPLOYNOTES.rst  DEVELOPERNOTES.rst  README.rst  architecture.html  changelog.html  codecov.yml  codedocs.html  dev-requirements.txt  diff.txt  docker-compose.yml  genindex.html  index.html  jest.config.js  lighthouserc.js  manage.py  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  systems@libservdhc7  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  unit_tests.yml
_modules/: cached_property.html  index.html
_modules/djiffy/: models.html
_modules/rdflib/: term.html
_sources/: architecture.rst.txt  codedocs.rst.txt
_static/: documentation_options.js
ci/: config_solr.sh  testsettings.py
data-export-meta/: README.rst  SCoData_books_v1.2_2021-12_datapackage.json  SCoData_books_v1.2_2022-12_datapackage.json  SCoData_combined_v1.1_2021-01-datapackage.json  SCoData_combined_v1.2_2022-01_datapackage.json  SCoData_events_v1.1_2021-01_datapackage.json  SCoData_events_v1.2_2022-01_datapackage.json  SCoData_members_v1.2_2021-12_datapackage.json  SCoData_members_v1.2_2022-01_datapackage.json  book_changes.py  books-datapackage.json  events-datapackage.json  full-datapackage.json  member_changes.py  members-datapackage.json  readme_info.py
data-export-meta/v1.1/: SCoData_books_v1.1_2021-01_datapackage.json  SCoData_combined_v1.1_2021-01-datapackage.json  SCoData_members_v1.1_2021-01_datapackage.json
data-export-meta/v1.2/: SCoData_books_v1.2_2022-12_datapackage.json  SCoData_books_v1.2_removed.csv  SCoData_events_v1.2_2022-01_datapackage.json  SCoData_members_v1.2_2022-01_datapackage.json  SCoData_members_v1.2_removed.csv
data-export-meta/v2.0/: SCoData_books_v2.0_changelog.txt  SCoData_books_v2.0_removed.csv  SCoData_members_v2.0_changelog.txt  SCoData_members_v2.0_removed.csv  SCoData_v2.0_2024_datapackage.json
deploy/: hosts  site.yml
deploy/group_vars/: all.yml  prod.yml  qa.yml
docs/: .buildinfo  architecture.html  changelog.html  codedocs.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: cached_property.html  index.html
docs/_sources/: architecture.rst.txt  codedocs.rst.txt
docs/_static/: documentation_options.js
js/src/: main.js
mep/: DEVELOPERNOTES.rst  __init__.py  conftest.py  context_processors.py  dashboard.py  local_settings.py.sample  settings.py  urls.py  validators.py  wsgi.py
mep/accounts/: __init__.py  admin.py  apps.py  event_set.py  models.py  partial_date.py  queryset.py  tests.py  urls.py  views.py  xml_models.py
mep/books/: __init__.py  admin.py  apps.py  forms.py  migration_group_work_utils.py  models.py  oclc.py  queryset.py  sitemaps.py  tests.py  urls.py  utils.py  views.py
mep/common/: __init__.py  admin.py  apps.py  forms.py  models.py  solr.py  tests.py  utils.py  validators.py  views.py
mep/footnotes/: __init__.py  admin.py  apps.py  forms.py  models.py  queryset.py  tests.py  urls.py  views.py
mep/pages/: __init__.py  admin.py  apps.py  embed_finders.py  models.py  wagtail_hooks.py
mep/people/: __init__.py  admin.py  apps.py  forms.py  geonames.py  models.py  queryset.py  sitemaps.py  tests.py  urls.py  views.py  xml_models.py
mep/settings/: local_settings.py.sample
scss/: _mixins.scss  _typography.scss  _variables.scss  main.scss
scss/common/: _article.scss  _button.scss  _footer.scss  _header.scss  _main.scss  _nav.scss
scss/members/: _member-details.scss
scss/snippets/: _body.scss  _footer.scss  _header.scss  _intro.scss  _main.scss  _posts.scss
sitemedia/css/: local-admin.css  local.css  test-banner.css
sitemedia/favicon/: site.webmanifest
solr_conf/conf/: managed-schema  solrconfig.xml
sphinx-docs/: Makefile  architecture.rst  codedocs.rst  conf.py  davila-customize.csv  index.rst  mep_0004.sql  mep_schema.sql  mep_schema_0.18.sql  mep_schema_0.19.sql  mep_schema_0.21.sql  mep_schema_0010.sql
srcmedia/js/: main.js  main.ts  search.js
srcmedia/scss/: _mixins.scss  _reset.scss  _typography.scss  _variables.scss  main.scss  print.scss
srcmedia/ts/: activities.ts  books-search.ts  cards-search.ts  globals.d.ts  main.ts  members-map.ts  members-search.ts  membership-graphs.ts  search.ts  utilities.ts
templates/: 404.html  500.html  about.html  base.html  home.html  index.html  robots.txt
templates/admin/: base_site.html
templates/snippets/: analytics.html  breadcrumbs.html  footer.html  head_meta.html  header.html  nav.html  page-controls.html  pagination.html  plausible_analytics.html
(+444 files in other folders)
